# roster-agent-runtime

./: .gitignore  pyproject.toml
roster_agent_runtime/: constants.py  errors.py  logs.py  main.py  notifier.py  settings.py  singletons.py  util.py
roster_agent_runtime/agents/: __init__.py  base.py  http.py  pool.py
roster_agent_runtime/agents/local/: base.py  handle.py  product_manager.py  software_architect.py  web_developer.py
roster_agent_runtime/api/: agent.py  messaging.py  routes.py  tasks.py
roster_agent_runtime/controllers/agent/: __init__.py  base.py  errors.py  store.py
roster_agent_runtime/controllers/events/: status.py
roster_agent_runtime/executors/: __init__.py  base.py  docker.py  local.py  store.py
roster_agent_runtime/executors/events/: status.py
roster_agent_runtime/informers/: base.py  docker.py  roster.py  stream.py
roster_agent_runtime/listeners/: base.py  docker.py
roster_agent_runtime/messaging/: rabbitmq.py  router.py
roster_agent_runtime/models/: agent.py  common.py  controller.py  conversation.py  files.py  messaging.py  task.py
roster_agent_runtime/services/: agent.py  messaging.py
roster_agent_runtime/util/: async_helpers.py
scripts/: cfn_github_pr.txt  cfn_github_pr_expanded.txt  cfn_workflow_init_expanded.txt  cfn_workflow_initiate.txt  plan_code_changes.py  process_codebase.py  roster_codebase_summary.txt  roster_codebase_tree.txt  roster_expert_summaries.txt  roster_extended_experts.txt  util.py  write_code.py
tests/: test_controller.py  test_integration.py
tests/mock/: executor.py  roster_informer.py
(+27 files in other folders)
