[tool.poetry]
name = "roster-agent-runtime"
version = "0.1.0"
description = "Agent Runtime Interface for Roster"
authors = ["Evan Doyle <evanmdoyle@gmail.com>"]

[tool.poetry.scripts]
roster-agent-runtime = "roster_agent_runtime.main:run"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
environs = "^9.5.0"
docker = "^6.1.1"
aiohttp = "^3.8.4"


[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
